--- a/FileBoxApp/Components/Pages/NewDocument.razor
+++ b/FileBoxApp/Components/Pages/NewDocument.razor
@@ -86,7 +86,7 @@
 		File = new FileBoxFile()
 			{
 				Name = fileInfo.Name.Remove(fileInfo.Name.LastIndexOf("."), fileInfo.Extension.Length),
-				Created = fileInfo.CreationTime,
+				Created = fileInfo.LastWriteTime,
 				Type = fileInfo.Extension.Replace(".", "")
 			};
 		Path = new FileBoxPath() { DeviceName = DeviceInfo.Name, CurrentlyActive = true, FilePath = $"{fileInfo.DirectoryName?.Replace("\\", "/")}/" };
