Added ability to look through folders and upload to them.
Fixed issue with upload Ids not being set right and corrupting other uploads. Changed storage of files to upload to IndexedDB instead of RAM.

--- a/FileBoxWebApp/FileBoxWebApp/Components/App.razor
+++ b/FileBoxWebApp/FileBoxWebApp/Components/App.razor
@@ -15,6 +15,7 @@
 <body>
     <Routes @rendermode="InteractiveWebAssembly" />
     <script src="_framework/blazor.web.js"></script>
+    <script src="indexedDbInterop.js"></script> <!--Adds IndexDB Service-->
 </body>
 
 </html>
